--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="btn-add" id="addBookBtn">+ Add Book</button>
         <div class="book-grid" id="bookGrid"></div>
     </div>
-    <div class="add-book-popup" id="addBookPopup">
+    <div class="popup" id="addBookPopup">
         <form action="" class="add-book-form" id="addBookForm">
             <h3>Add new book</h3>
             <input type="text" class="input" id="title" placeholder="Title" required>
@@ -31,6 +31,7 @@
             <button type="submit" class="btn-submit">Submit</button>
         </form>
     </div>
+    <div class="overlay" id="overlay"></div>
 </body>
 
 </html>
