add data constructor

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
-    <script src="library.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <h3>Add new book</h3>
             <input type="text" class="input" id="title" placeholder="Title" required>
             <input type="text" class="input" id="Athor" placeholder="Author" required>
-            <input type="number" class="input" id="pages" placeholder="Title" required>
+            <input type="number" class="input" id="pages" placeholder="Pages" required>
             <div class="is-read">
                 <label for="is-read">Have you read it?</label>
                 <input type="checkbox" id="isRead" class="checkbox">
