--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </div>
     <div class="main">
         <button class="btn-add" id="addBookBtn">+ Add Book</button>
-        <div class="book-grid" id="bookGrid"></div>
+        <div class="book-grid" id="booksGrid"></div>
     </div>
     <div class="modal" id="addBookModal">
         <form action="" class="add-book-form" id="addBookForm">
             <h3>Add new book</h3>
             <input type="text" class="input" id="title" placeholder="Title" required>
-            <input type="text" class="input" id="Athor" placeholder="Author" required>
+            <input type="text" class="input" id="author" placeholder="Author" required>
             <input type="number" class="input" id="pages" placeholder="Pages" required>
             <div class="is-read">
                 <label for="is-read">Have you read it?</label>
